<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.lunapark.dev.intervaltimer.MainActivity">

    <LinearLayout
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStart"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/button_vertical_padding"
            android:paddingTop="@dimen/button_vertical_padding"
            android:text="@string/btn_start"
            android:textSize="@dimen/button_text_size"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnReset"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/button_vertical_padding"
            android:paddingTop="@dimen/button_vertical_padding"
            android:text="@string/btn_reset"
            android:textSize="@dimen/button_text_size"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnStop"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:paddingBottom="@dimen/button_vertical_padding"
            android:paddingTop="@dimen/button_vertical_padding"
            android:text="@string/btn_stop"
            android:textSize="@dimen/button_text_size"
            android:typeface="monospace" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/circle_shape"
        android:indeterminate="false"
        android:max="100"
        android:progress="30"
        android:progressDrawable="@drawable/circular_progress_bar" />

    <TextView
        android:id="@+id/tvInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="0\n00:00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_toLeftOf="@+id/tvInterval"
        android:layout_toStartOf="@+id/tvInterval"
        android:text="@string/txt_interval1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/tvInterval"
        android:layout_toRightOf="@+id/tvInterval"
        android:text="@string/txt_interval2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvInterval"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_cycle"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInterval"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTime1"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/button_vertical_padding"
            android:paddingTop="@dimen/button_vertical_padding"
            android:text="NИ"
            android:textSize="@dimen/button_text_size"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btnPresets"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/button_vertical_padding"
            android:paddingTop="@dimen/button_vertical_padding"
            android:text="..."
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/btnTime2"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/button_vertical_padding"
            android:paddingTop="@dimen/button_vertical_padding"
            android:text="NИ"
            android:textSize="@dimen/button_text_size"
            android:typeface="monospace" />
    </LinearLayout>


</RelativeLayout>
